# kurs_python

./: .gitignore  cechy_output.txt  dane.npy  dane.txt  fsa_case_train.csv  lab01.ipynb  lab02.ipynb  pyproject.toml  sandbox.ipynb  tablice.npz  zajecia_12-numpy.ipynb
.trunk/: trunk.yaml
Materiały do zajęć-20240117/: kraje_dane.csv  zajecia_13-Pandas.ipynb
Zajęcia 3-20231018/: lab3 - zadanie.ipynb
Zajęcia 4 [MJ]-20231025/: Zadania_25_10MJ.txt  Zajecia_4.ipynb  zadania-domowe.ipynb
Zajęcia 5 [MJ]-20231112/: Funkcyjny.czysty.ipynb  Funkcyjny.ipynb  zadanie-domowe-5.py
zadanie_zaliczeniowe/: .env  README.md
zadanie_zaliczeniowe/bus-analysis/: .pylintrc  README.md  pyproject.toml  setup.cfg  setup.py
zadanie_zaliczeniowe/bus-analysis/bus_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
zadanie_zaliczeniowe/data/: analyze_bus_data  analyze_bus_punctuality  analyze_bus_speed  analyze_speed_violation_by_location  buses_online.csv  buses_with_nearest_stops  buses_with_stops.csv  fetch_buses_data  fetch_routes_data  fetch_stops_data  just_stops.csv  significant_speed_violations.csv  tofast.csv  too_fast.csv
zadanie_zaliczeniowe/maps/: significant_violations_map.html
zajecia 10/: test.sh  ulamek_testy.py  zajecia_10.ipynb
zajecia 10/ulamek/: ulamek_rozszerzony.py
zajęcia 6/: funkcyjny2_s.ipynb
zajęcia 7/: Kurs Pythona - programowaie obiektowe std.ipynb
zajęcia 8/: Kurs Pythona - programowanie obiektowe cz.2.ipynb  testuj.sh  ulamek_bez_slots.py  ulamek_ze_slots.py  wyniki_testow.txt
zajęcia 9/: zadanie_domowe.py
(+6 files in other folders)
